--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="video-background">
     <video autoplay muted loop playsinline>
-        <source src="/bg.mp4" type="video/mp4">
+        <source src="bg.mp4" type="video/mp4">
     </video>
     </div>
     <div class="video-overlay"></div>
